new sections and layout

--- a/craving.qmd
+++ b/craving.qmd
@@ -4,74 +4,74 @@ format: html
 editor: visual
 ---
 
-# Craving
+# 🌊 **Understanding Cravings**
 
-As you change your drinking, it’s normal and common to have urges or a craving for alcohol. The words “urge” and “craving” refer to a broad range of thoughts, physical sensations, or emotions that tempt you to drink, even though you have at least some desire not to. You may feel an uncomfortable pull in two directions or sense a loss of control.
+As you work on changing your drinking, it’s normal to have urges or cravings for alcohol. A craving is when you feel the strong urge to drink, even though you don’t want to. This can show up as thoughts, emotions, or physical sensations that pull you toward drinking, even if part of you wants to stay sober.
 
-Fortunately, urges to drink are **short-lived**, **predictable**, and **controllable**. With time, and by practicing new responses, you’ll find that your urges to drink will lose strength, and you’ll gain confidence in your ability to deal with urges that may still arise at times.
+**Good news:** Cravings are short-lived, predictable, and controllable. With practice, they will get weaker, and you'll feel more confident in handling them when they pop up.
 
-Here are some important facts about craving to keep in mind as you begin to work with identifying and coping with urges during recovery:
+### **What is a Craving?**
 
-## What are cravings?
+A craving is a powerful feeling that pushes you to drink alcohol, even when you don’t want to. It can feel like a strong mental or physical need to drink. Cravings happen because of the long-term use of alcohol, and they can last for some time after you stop drinking.
 
-Broadly, craving refers to a strong desire to use alcohol or other drugs that, if unfulfilled, produces an often powerful degree of physical and/or mental suffering. Cravings are the result of long-term alcohol and/or other drug use and can continue for some time after the use has stopped. People with a history of heavier use might experience stronger or more frequent urges. **Experiencing cravings is a normal part of recovery and is common across all stages of recovery**.
+If you've had a lot of drinking in the past, cravings may come up more often or feel stronger. But don’t worry! Cravings are a normal part of recovery, and they happen at all stages of recovery.
 
-Cravings and urges can show up in many ways, such as:
+### **How Do Cravings Show Up?**
 
--   Physical sensations (e.g., sweating, heart racing, queasy stomach)
+Cravings can look different for everyone. Here are some ways cravings might show up for you:
 
--   Thoughts (e.g., “A drink sounds good right now”, “I’d rather be with my friends getting drunk tonight”)
+-   **Physical feelings:** You might feel shaky, sweaty, or have a racing heart.
 
--   Positive expectancies (e.g., “I would have more fun if I was drinking”)
+-   **Thoughts:** You might think, *"I want a drink,"* or *"It would be fun to drink with my friends right now."*
 
--   Emotions (e.g., anxiety, depression, irritability)
+-   **Emotions:** Cravings can come with feelings like anxiety, frustration, or sadness.
 
--   Behaviors (e.g., pausing while passing the beer display in a store, hanging out in bars or with others who are drinking).
+-   **Behaviors:** You might find yourself lingering near places where alcohol is sold, or spending time with others who are drinking.
 
-## Cravings are PREDICTABLE
+### **Cravings Are Predictable**
 
-Cravings can occur in response to triggers (e.g. being around people or situations that remind someone of past alcohol use) or withdrawal (stopping regular use of alcohol).
+Cravings don’t happen randomly. They can be triggered by certain situations or emotions. These triggers can be internal (how you’re feeling) or external (things around you).
 
-Withdrawal: Our brains begin to regulate themselves with alcohol. Without it, the brain makes chemical demands and requests for alcohol. You can expect cravings from withdrawal to be present at the beginning of recovery and diminish over time
+-   **Internal triggers**: These are feelings or thoughts that can bring on cravings, like stress, sadness, or even excitement. You might also feel physical discomfort, like being tired or in pain.
 
-Triggers have to do with our memories of alcohol. Alcohol and other drugs flood our brain with reward chemicals like dopamine. Long after our last drink, our brains and memories still associate drinking with this flood of reward. When we're exposed to a cue or stimulus that triggers those latent memories, our brains beg us for more reward chemicals. And thus a craving is born.
+-   **External triggers**: These are things in the environment that remind you of drinking, like seeing alcohol, being around people who drink, or even times of day when you used to drink.
 
-Cravings can be internal or external:
+The more you recognize what causes your cravings, the better you can plan for them. Understanding what triggers your cravings can help you avoid or manage them.
 
-**Internal Situations:**
+### **Cravings Are Temporary**
 
--   Unpleasant emotions (e.g., frustration, depression, anger, feeling “stressed out”)
+Cravings might feel intense, but here’s the important thing to remember: **they don’t last long**. Most cravings only last a few minutes. Think of a craving like a wave in the ocean. It starts small, gets bigger, and then crashes and disappears.
 
--   Pleasant emotions (e.g., joy, excitement)
+Even though cravings can feel overwhelming at first, they are time-limited and will pass. The key is not giving in to the craving. The more you ignore the craving and choose not to drink, the weaker it becomes.
 
--   Physical feelings (e.g., sick, shaky, tense, in pain)
+### **Cravings Get Easier Over Time**
 
--   Thoughts about drinking (e.g., “I’ll feel better if I get drink”)
+At the start of your recovery, cravings may be stronger and more frequent. But over time, they will get weaker and less intense. Each time you resist the urge to drink, the craving loses power.
 
-**External Situations**
+Stopping alcohol use completely is the fastest way to get rid of cravings. If you don’t reward craving with alcohol use, it will eventually go away. It’s like feeding a stray animal. If you stop feeding it, it will stop coming back.
 
--   Exposure to alcohol (e.g. alcohol in the home)
+### **What Can You Do When a Craving Hits?**
 
--   Smell, sight and sounds of other people drinking
+When you feel a craving, remember: it’s temporary and you can control how you respond. Here are some ways to deal with cravings:
 
--   Particular times during the day when drinking used to occur (e.g., getting off work, weekends, payday)
+1.  **Pause and Breathe**: Take a deep breath. Focus on the present moment.
 
--   Stimuli previously associated with drinking (e.g., wine glasses, bar, , ATM machine)
+2.  **Distraction**: Do something else to take your mind off the craving, like going for a walk, calling a friend, or reading a book.
 
--   Stimuli previously associated with withdrawal (e.g., hospital, aspirin, morning)
+3.  **Urge Surfing**: Imagine the craving is like a wave—let it build, but know it will crash and pass.
 
-**The more we learn to better identify our cravings, the better we can predict them**
+4.  **Reach Out**: Talk to someone you trust, like a sponsor or a friend. Sometimes, just sharing how you feel can help.
 
-## Cravings are TEMPORARY
+### **Remember: Cravings Don’t Last Forever**
 
-Though the experience of cravings may be incredibly intense, it is important to remember that cravings are time-limited and WILL PASS. Most cravings last only a few minutes.
+It’s completely normal to experience cravings in recovery. But the more you practice coping with them, the easier it will get. Cravings are like visitors—they come and go. With time and practice, you will get better at handling them.
 
-A craving is just like a wave at the beach. Every wave in a set starts off small, builds up to its highest point, and then breaks and flows away to shore. Each individual wave never lasts more than a few minutes. A craving is just the same. It starts off small and then builds up. But it peaks, just like a wave, and will eventually break and disappear. This whole process usually doesn’t last more than minutes. Cravings are time-limited.
+By staying sober, even when cravings are strong, you’ll find that the cravings become less powerful and easier to ignore. You’ve got this!
 
-Cravings will lose their power if they are not reinforced by using or drinking in response. Even if use occurs only once in a while, it will still keep those cravings alive. Cravings are like stray animals – keep feeding them and they will keep coming back. So in a very real sense these cravings are controllable.
+----------------------------------
 
-Cravings tend to be stronger earlier on, then weaken, and eventually fade over time.
+## Urge Surfing-
 
-Each time a person does something other than drink and/or use others drugs, the craving loses power.
+Urge Surfing is a way to deal with alcohol cravings by noticing the feeling, not fighting it, and letting it pass like a wave. Remember that cravings are TEMPORARY. Like ocean waves, you can visualize the rise and fall of your cravings, allowing you to "ride the wave" until they go away on their own. Use the instructions below to practice urge surfing the next time you feel a craving:
 
-Stopping alcohol and other drug use completely is the quickest way to get rid of the cravings.
+## ![](images/urge_surfing.PNG)
