--- a/craving_activities.qmd
+++ b/craving_activities.qmd
@@ -19,7 +19,7 @@ editor: visual
 
 🌊 Most cravings peak and fade within minutes if we don’t fuel them.
 
---------
+------------------------------------------------------------------------
 
 **2. 5-Senses Grounding**
 
@@ -67,7 +67,7 @@ editor: visual
 
 🔍 Cravings often cover up unmet needs. Once we know the need, we can meet it in a better way.
 
------------------------------------
+------------------------------------------------------------------------
 
 **6. Delay + Distract Drill**
 
@@ -77,7 +77,7 @@ Then reassess: *Do I still want it as much as I did before?*
 
 ⏱ Even a short pause can short-circuit the craving loop.
 
------------------------------
+------------------------------------------------------------------------
 
 **7. "Play It Through" Visualization**
 
@@ -94,7 +94,7 @@ Now picture the other path:
 
 🔮 Cravings focus on short-term pleasure. This helps you see the full picture.
 
---------------------------------------
+------------------------------------------------------------------------
 
 **8. Cold Water Reset**
 
@@ -119,7 +119,7 @@ Over time, this log shows you patterns *and* progress.
 
 📓 Writing about it helps shift you from reacting to responding.
 
-------------------------------------------------------
+------------------------------------------------------------------------
 
 **10. Recovery Reminder Card**
 
@@ -152,33 +152,23 @@ OTHER FORMATTING OPTION:::
 >
 > -   
 >
-> -   
->
->     *Name 5 things you can see.*
+> -   *Name 5 things you can see.*
 >
 > -   
 >
-> -   
->
->     *Now, 4 things you can feel—like your clothes, the floor, or your breath.*
+> -   *Now, 4 things you can feel—like your clothes, the floor, or your breath.*
 >
 > -   
 >
-> -   
->
->     *3 things you can hear, even very faint sounds.*
+> -   *3 things you can hear, even very faint sounds.*
 >
 > -   
 >
-> -   
->
->     *2 things you can smell.*
+> -   *2 things you can smell.*
 >
 > -   
 >
-> -   
->
->     *And finally, 1 thing you can taste—or imagine tasting.*
+> -   *And finally, 1 thing you can taste—or imagine tasting.*
 >
 > -   
 >
