--- a/modules/in_progress/future_efficacy_activity_ideas.qmd
+++ b/modules/in_progress/future_efficacy_activity_ideas.qmd
@@ -1,7 +1,6 @@
 ---
 title: "future efficacy activities"
 format: html
-editor: visual
 ---
 
 # 
@@ -14,33 +13,23 @@ editor: visual
 
 -   
 
--   
-
-    Pause for a moment and ask yourself: *Why do I want to stay sober this week?*
+-   Pause for a moment and ask yourself: *Why do I want to stay sober this week?*
 
 -   
 
--   
-
-    Now write down or say out loud **3 reasons**—big or small.
+-   Now write down or say out loud **3 reasons**—big or small.
 
     -   
 
-    -   
-
-        “To feel proud of myself.”
+    -   “To feel proud of myself.”
 
     -   
 
-    -   
-
-        “So I wake up clear-headed.”
+    -   “So I wake up clear-headed.”
 
     -   
 
-    -   
-
-        “Because I deserve better.”
+    -   “Because I deserve better.”
 
     -   
 
@@ -56,29 +45,21 @@ editor: visual
 
 -   
 
--   
-
-    On a scale from 0 to 10, how confident do you feel about staying sober this week?
+-   On a scale from 0 to 10, how confident do you feel about staying sober this week?
 
 -   
 
--   
-
-    Whatever your number is, ask yourself: *Why isn’t it lower?*
+-   Whatever your number is, ask yourself: *Why isn’t it lower?*
 
     -   
 
-    -   
-
-        Maybe you’ve made it through before, or you reached out for support.
+    -   Maybe you’ve made it through before, or you reached out for support.
 
     -   
 
 -   
 
--   
-
-    Now ask: *What’s one small thing I could do to move that number up just one point?*
+-   Now ask: *What’s one small thing I could do to move that number up just one point?*
 
 -   
 
@@ -92,21 +73,15 @@ editor: visual
 
 -   
 
--   
-
-    Close your eyes and picture one challenging moment you expect this week.
+-   Close your eyes and picture one challenging moment you expect this week.
 
 -   
 
--   
-
-    Now imagine yourself getting through it without drinking—calm, steady, and proud.
+-   Now imagine yourself getting through it without drinking—calm, steady, and proud.
 
 -   
 
--   
-
-    Visualize the moment passing and how you’ll feel afterward.
+-   Visualize the moment passing and how you’ll feel afterward.
 
 -   
 
@@ -120,35 +95,25 @@ editor: visual
 
 -   
 
--   
-
-    Choose one of these empowering phrases—or make your own:
+-   Choose one of these empowering phrases—or make your own:
 
     -   
 
-    -   
-
-        “This is hard, but I’ve done hard things before.”
+    -   “This is hard, but I’ve done hard things before.”
 
     -   
 
-    -   
-
-        “I don’t have to believe every thought I think.”
+    -   “I don’t have to believe every thought I think.”
 
     -   
 
-    -   
-
-        “I’m learning—not failing.”
+    -   “I’m learning—not failing.”
 
     -   
 
 -   
 
--   
-
-    Say it to yourself now, or write it on a sticky note or phone reminder.
+-   Say it to yourself now, or write it on a sticky note or phone reminder.
 
 -   
 
@@ -162,21 +127,15 @@ editor: visual
 
 -   
 
--   
-
-    Think back to one time you resisted an urge or made a positive choice in your recovery.
+-   Think back to one time you resisted an urge or made a positive choice in your recovery.
 
 -   
 
--   
-
-    Ask: *What helped me succeed in that moment?*
+-   Ask: *What helped me succeed in that moment?*
 
 -   
 
--   
-
-    Then say or write: *What does that success say about me?*
+-   Then say or write: *What does that success say about me?*
 
 -   
 
@@ -190,35 +149,25 @@ editor: visual
 
 -   
 
--   
-
-    Write down 3 things you’ve done today that support your recovery.
+-   Write down 3 things you’ve done today that support your recovery.
 
     -   
 
-    -   
-
-        Drank water instead of alcohol
+    -   Drank water instead of alcohol
 
     -   
 
-    -   
-
-        Opened this app
+    -   Opened this app
 
     -   
 
-    -   
-
-        Took a deep breath before reacting
+    -   Took a deep breath before reacting
 
     -   
 
 -   
 
--   
-
-    Read the list out loud and take a moment to feel a sense of progress.
+-   Read the list out loud and take a moment to feel a sense of progress.
 
 -   
 
@@ -232,21 +181,15 @@ editor: visual
 
 -   
 
--   
-
-    Imagine it’s next week, and you stayed sober.
+-   Imagine it’s next week, and you stayed sober.
 
 -   
 
--   
-
-    Picture that version of you. How do they feel? What are they proud of? What do they get to enjoy because of your choice today?
+-   Picture that version of you. How do they feel? What are they proud of? What do they get to enjoy because of your choice today?
 
 -   
 
--   
-
-    Now say or write one sentence: *“Future Me will be grateful because…”*
+-   Now say or write one sentence: *“Future Me will be grateful because…”*
 
 -   
 
@@ -260,29 +203,21 @@ editor: visual
 
 -   
 
--   
-
-    Send a quick message to someone who supports you. It could be:
+-   Send a quick message to someone who supports you. It could be:
 
     -   
 
-    -   
-
-        “Just letting you know I’m focusing on sobriety this week.”
+    -   “Just letting you know I’m focusing on sobriety this week.”
 
     -   
 
-    -   
-
-        “Can I check in with you later if things get tough?”
+    -   “Can I check in with you later if things get tough?”
 
     -   
 
 -   
 
--   
-
-    Don’t overthink it. One sentence is enough.
+-   Don’t overthink it. One sentence is enough.
 
 -   
 
@@ -296,35 +231,25 @@ editor: visual
 
 -   
 
--   
-
-    Choose one short phrase to repeat when your motivation wobbles:
+-   Choose one short phrase to repeat when your motivation wobbles:
 
     -   
 
-    -   
-
-        “Just for today.”
+    -   “Just for today.”
 
     -   
 
-    -   
-
-        “I don’t drink no matter what.”
+    -   “I don’t drink no matter what.”
 
     -   
 
-    -   
-
-        “This craving will pass.”
+    -   “This craving will pass.”
 
     -   
 
 -   
 
--   
-
-    Say it out loud now, and again later when you need it.
+-   Say it out loud now, and again later when you need it.
 
 -   
 
@@ -338,35 +263,25 @@ editor: visual
 
 -   
 
--   
-
-    Think of one tiny goal for today. Something that supports your recovery and feels 100% doable.
+-   Think of one tiny goal for today. Something that supports your recovery and feels 100% doable.
 
     -   
 
-    -   
-
-        “Drink a full glass of water after lunch.”
+    -   “Drink a full glass of water after lunch.”
 
     -   
 
-    -   
-
-        “Open the app again tonight.”
+    -   “Open the app again tonight.”
 
     -   
 
-    -   
-
-        “Write down one reason I want to stay sober.”
+    -   “Write down one reason I want to stay sober.”
 
     -   
 
 -   
 
--   
-
-    Say it out loud or text it to yourself.
+-   Say it out loud or text it to yourself.
 
 -   
 
