--- a/modules/pending_review/thought_stopping_2.qmd
+++ b/modules/pending_review/thought_stopping_2.qmd
@@ -9,33 +9,46 @@ You now know how **Thought stopping** provides a tool for disrupting the trigger
 
 Try the additional techniques below, and use the ones that work best for you:
 
-### 1.  The Stop Command
+### 1. The Stop Command
 
-As soon as you notice a thought about drinking or using, say **“STOP!”** out loud or in your head.
+As soon as you notice a thought about drinking or using, say **“STOP!”** out loud or in your head. Follow it immediately with a positive replacement thought, like *“I choose recovery”* or *“I am in control.”*
 
-Follow it immediately with a positive replacement thought, like *“I choose recovery”* or *“I am in control.”*
+### 2. Visualize a Stop Sign
 
-### 2.  Visualize a Stop Sign
+Picture a bright red stop sign in your mind when the thought begins. Hold the image for a few seconds and replace it with a healthy activity you can do instead.
 
-Picture a bright red stop sign in your mind when the thought begins.
+![](https://github.com/jjcurtin/aud_support/blob/main/modules/images/thought_stopping_2.png?raw=true)
 
-Hold the image for a few seconds and replace it with a healthy activity you can do instead.
+### 3. Physical Action Interrupt
 
-### 3.  Physical Action Interrupt
+Interrupt the thought with physical movement. Try one of the following as soon as a thought about drinking arises:
 
-Snap a rubber band on your wrist, clap your hands, or get up and move.
+-   Clap your hands or snap your fingers
 
-Physical movement helps break the chain from thought → craving → use.
+-   Get up and move around the room or take a short walk
 
-### 4.  Write It Down
+-   Do jumping jacks, push-ups, or squats
 
-Quickly jot down the thought in a notebook.
+-   March in place or jog lightly on the spot
 
-Writing externalizes the thought, making it easier to let go and redirect your attention.
+-   Stretch your arms, legs, or back
 
-### 5.  Engage in a Healthy Replacement Activity
+-   Dance to a favorite song for a minute or two
+
+-   Shake out your hands and arms
+
+-   Step outside for fresh air or a change of scenery
+
+-   Engage your hands by cleaning, organizing, or squeezing a stress ball
+
+### 4. Write It Down
+
+Quickly jot down the thought in a notebook. Writing externalizes the thought, making it easier to let go and redirect your attention.
+
+### 5. Engage in a Healthy Replacement Activity
 
 Have a list of activities ready that you can do whenever a thought of using arises. Examples: going for a walk, calling a supportive friend, exercising, or practicing deep breathing.
 
+### Remember
 
-**Tip:** Thought-stopping is a skill that improves with practice. The earlier you catch a thought, the easier it is to stop before it grows into a craving. Make these exercises part of your daily routine to strengthen your ability to respond to triggers and maintain control over your recovery.
+Thought-stopping is a skill that improves with practice. The earlier you catch a thought, the easier it is to stop before it grows into a craving. Make these exercises part of your daily routine to strengthen your ability to respond to triggers and maintain control over your recovery.
