--- a/modules/pending_review/thought_stopping_1.qmd
+++ b/modules/pending_review/thought_stopping_1.qmd
@@ -7,17 +7,30 @@ format: html
 
 To sustain recovery, it is necessary to interrupt the trigger–thought–craving–use sequence<!--refer to trigger_thought_craving_reading.qmd-->. **Thought stopping** provides a tool for disrupting the process.
 
-![](https://github.com/jjcurtin/aud_support/blob/main/modules/images/thought_stopping.png?raw=true)
+![](https://github.com/jjcurtin/aud_support/blob/main/modules/images/thought_stopping_1.png?raw=true)
 
 This process is not automatic. You make a choice either to continue thinking about drinking (and start on the path toward relapse) or to stop those thoughts.
-
 
 ### Techniques
 
 Try the techniques described below, and use those that work best for you:
 
-## 1.  Visualization. 
-Imagine a scene in which you deny the power of thoughts of use. For example, picture a switch or a lever in your mind. Imagine yourself actually moving it from ON to OFF to stop the using thoughts. Have another picture ready to think about in place of those thoughts.
+#### 1. Visualization.
 
+Imagine a scene in which you deny the power of thoughts of drinking. For example, picture a switch or a lever in your mind. Imagine yourself actually moving it from ON to OFF to stop the drinking thoughts. Have this picture ready to think about in place of those thoughts when they come up.
 
-**Tip:** Thought-stopping is a skill that improves with practice. The earlier you catch a thought, the easier it is to stop before it grows into a craving. Make these exercises part of your daily routine to strengthen your ability to respond to triggers and maintain control over your recovery.
+#### 2. Snapping
+
+Wear a rubberband loosely on your wrist. Each time you become aware of thoughts of drinking, snap the rubberband and say **“No!”** to the thoughts as you make yourself think about another subject. Have a subject ready that is meaningful and interesting to you.
+
+#### 3. Relaxation
+
+Feelings of hollowness, heaviness, and cramping in the stomach are cravings. These often can be relieved by breathing in deeply (filling lungs with air) and breathing out slowly. Do this three times. You should be able to feel the tightness leaving your body. Repeat this whenever the feeling returns.
+
+#### 4. Call Someone
+
+Talking to another person provides an outlet for your feelings and allows you to hear your thinking process. Have phone numbers of supportive, available people with you always, so you can use them when you need them.
+
+### *Tip*
+
+Thought-stopping is a skill that improves with practice. The earlier you catch a thought, the easier it is to stop before it grows into a craving. Make these exercises part of your daily routine to strengthen your ability to respond to triggers and maintain control over your recovery.
