--- a/modules/pending_review/grounding.qmd
+++ b/modules/pending_review/grounding.qmd
@@ -41,6 +41,8 @@ Notice one taste fully and slowly. Pay full attention to the sensation and enjoy
 
 *Examples: a sip of tea, a square of chocolate, a piece of fruit.*
 
+::: {.callout-tip}
 ### Tip
 
 Doing this exercise regularly will help you become more comfortable with the skill, so you can use it more effectively when you are feeling stressed or distressed.
+:::
